...

  ///List of Strings to send the results of the form to the algorithm on valid submission.
  List<String> _formParameters;

  ///List to store the text of default suggestions (frequently used room names)
  List<String> _frequentlyUsedRoomNames = [
    "Cafe", "Lecture Theater", "Flat Floor", "MSc"
  ];

  ///List to store the id of default suggestions (frequently used room ids)
  List<String> _frequentlyUsedRoomId = [
    "G.071", "1.006", "3.015", "4.005"
  ];

  /// Loads the [SearchFormPage] for this page to display.
  @override
  void initState() {
    super.initState();
...
          mainAxisAlignment: MainAxisAlignment.center,
          children: <Widget>[
            Padding(
              padding: EdgeInsets.all(15.0),
              // First TextField (Enter Destination).
              child: TypeAheadFormField(
                key: Key("destination"),
                textFieldConfiguration: TextFieldConfiguration(
                  controller: this._typeAheadControllerFirst,
                  autofocus: false,
                  decoration: InputDecoration(
                    border: OutlineInputBorder(
                        borderRadius: BorderRadius.all(Radius.zero)
...
                  this._typeAheadControllerFirst.text = suggestion;
                },
                // Validate field.
                validator: (value) {
                  if (value.isEmpty) {
                    // If empty, return default suggestions.
                    return 'Please select a room';
                  } else if (!validInputs.contains(value)) {
                    // Not a valid value.
                    return 'Please enter a valid value, e.g 1.006';
                  }
                },
                noItemsFoundBuilder: (BuildContext context) =>
                    ListView(
                      key: Key("default_suggestions_destination"),
                        //  If no suggestions then create default suggestions.
...
              ),
            ),
            Padding(
              padding: EdgeInsets.all(15.0),
              // Second TextField (Enter Current Location).
              child: TypeAheadFormField(
                key: Key("current_location"),
                textFieldConfiguration: TextFieldConfiguration(
                    controller: this._typeAheadControllerSecond,
                    autofocus: false,
                    decoration: InputDecoration(
                      border: OutlineInputBorder(
                          borderRadius: BorderRadius.all(Radius.zero)
...
