...
    }
  }

  /// Returns a [Widget] containing the values for the sensors in [_currentRoom].
  Widget _listUI() {
    return Padding(
        key: Key('sensor_data'),
        padding: EdgeInsets.only(top: 16.0),
        // Create list of sensor data.
        child: ListView.builder(
            physics: AlwaysScrollableScrollPhysics(),
            shrinkWrap: true,
            itemCount: _dataPoints.length,
...
              unselectedLabelColor: Colors.black,
              labelColor: Color(0xFF96B24A),
              tabs: <Widget>[
                Tab(text: 'About'),
                Tab(
                  // Key used for testing
                  key: Key('pick_a_room_tab'),
                  text: 'Pick a room',
                ),
              ],
            ),
            Expanded(
              child: TabBarView(
...
                        )
                      ],
                    ),
                  ),
                  Scaffold(
                    floatingActionButton: FloatingActionButton(
                        key: Key('sensor_refresh'),
                        backgroundColor: Color(0xFF96B24A),
                        child: Icon(Icons.refresh),
                        // Only refresh if a room has been selected.
                        onPressed: () => _currentRoom != null ? {
                        _pullRefresh = false,
                        _loadSensorData(_currentRoom)
...
                    body: Padding(
                        padding: EdgeInsets.all(16.0),
                        child: Container(
                          child: Column(
                            children: <Widget>[
                              TextField(
                                key: Key('room_input'),
                                controller: _controller,
                                style: TextStyle(
                                    fontSize: 20.0
                                ),
                                decoration: InputDecoration(
                                    border: OutlineInputBorder(),
                                    hintText: 'Enter a room...',
                                    suffixIcon: IconButton(
                                        key: Key('search_btn'),
                                        icon: Icon(Icons.search),
                                        onPressed: () => {
                                        FocusScope.of(context).requestFocus(FocusNode()),
                                        _loadSensorData(_controller.text)
                                        }
                                    )
...
                                  child: !_connection ? Center(
                                    child: Text("Please check your internet connection"),
                                  ) : _fetching && !_pullRefresh ? Center(
                                    child: CircularProgressIndicator(),
                                  ) : _fetching && _pullRefresh ? Container()
                                      : !_fetching && _dataPoints == null ? Center(
                                    child: Text('No data requested'),
                                  ) : _dataPoints.length == 0 ? Center(
                                    child: Text('No sensors available in this room'),
                                  ) : RefreshIndicator(
                                    child: _listUI(),
                                    onRefresh: () {
                                      _pullRefresh = true;
                                      return _loadSensorData(_currentRoom);
                                    },
...
