...
  @override
  Widget build(BuildContext context) {
    if (path.isNotEmpty) {
      return Scaffold(
        body: Column(children: <Widget>[
          DropdownButton<Floor>(
            key: Key('dropdown_btn'),
            value: dropdownValue,
            onChanged: (Floor newValue) {
              setState(() {
                if (_target != null) {
                  if (_target.id.startsWith('S')) {
                    _source = _target.copy();
...
        bottomNavigationBar: BottomAppBar(
            child: new Row(
          mainAxisSize: MainAxisSize.max,
          mainAxisAlignment: MainAxisAlignment.spaceBetween,
          children: <Widget>[
            IconButton(
              key: Key('source_btn'),
              icon: Icon(Icons.trip_origin),
              onPressed: () {
                setState(() {
                  _navigateAndDisplayRoomList(context, 1);
                });
              },
            ),
            IconButton(
              key: Key('target_btn'),
              icon: Icon(Icons.lens),
              onPressed: () {
                setState(() {
                  _navigateAndDisplayRoomList(context, 2);
                });
              },
            ),
          ],
        )),
        floatingActionButton: FloatingActionButton(
          key: Key('draw_btn'),
          onPressed: () {
            setState(() {
              if (_source == null || _target == null) {
                Scaffold.of(context).showSnackBar(new SnackBar(
                  content:
                      new Text("Both source and target must be selected first"),
...
  Widget build(BuildContext context) {
    return Scaffold(
        appBar: AppBar(
          title: Text('Select a room'),
        ),
        body: ListView.builder(
          key: Key('room_list'),
            padding: const EdgeInsets.all(10.0),
            itemCount: overallLength,
            //List of all the nodes on the specified floor (floorNum).
            itemBuilder: (context, i) {
              /*if(i == floorNodes[0].length){
                return Text("Floor 1");
...
